Migrated code-base from LAN.